test_regress/t/t_timing_zerodly_unsup.out
%Warning: t/t_timing_zerodly_unsup.v:22: Encountered #0 delay. #0 scheduling support is incomplete and the process will be resumed before combinational logic evaluation.
%Error: t/t_timing_zerodly_unsup.v:23: Verilog $stop
Aborting...
